fix layer on smaller screen sizes

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -162,9 +162,7 @@ header {
     color: white;
     .layer {
         background-color: rgba(0, 0, 0, 0.7);
-        position: absolute;
-        top: 0;
-        left: 0;
+        position:relative;
         width: 100%;
         height: 100%;
     }
@@ -193,6 +191,11 @@ header {
     }
     @media (min-width: 768px) {
         min-height: 100%;
+        .layer {
+            position:absolute;
+            top:0;
+            left:0;
+        }
         .header-content {
             position: absolute;
             top: 50%;
